@@ -29,6 +29,7 @@ Improvements:
  - Add +ESC key bindings. Example: `bind generic ^[v move-page-up` (GH #120)
  - Create temporary files in TMPDIR, TEMP, or TMP before defaulting to /tmp.
  - Reenable `tig log` as a subcommand. (GH #146)
+ - Enable tilde expansion in ~/.tigrc "source" commands. (GH #168)
 
 Bug fixes:
 
